# Pixel_Board

./: .gitignore  README.md  REAL_WORLD_INTEGRATION.md  VIZ_ORIENTATION_FIX.md  board_config.json  configure_board.py  handover.md  magic_board_live.py  ros_bridge.py  run_app.sh  start_real_world.sh  touch_output.py
big_boulder/: test_clamp.py  test_exact.sh
big_boulder/AdaptBoard/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
big_boulder/AdaptBoard/app/: build.gradle.kts
big_boulder/AdaptBoard/gradle/: libs.versions.toml
big_boulder/AdaptBoard/gradle/wrapper/: gradle-wrapper.properties
big_boulder/install/: local_setup.sh  setup.sh
big_boulder/install/adapt_display/lib/adapt_display/: py_node.py  remove_balls.py
big_boulder/install/adapt_display/share/adapt_display/: package.ps1  package.sh
big_boulder/log/: latest_build
big_boulder/src/adapt_display/: CMakeLists.txt
big_boulder/src/adapt_display/description/: ball.urdf
big_boulder/src/adapt_display/docs/: AGENT_INTERFACE.md  KOTLIN_UI.md  system_architecture.md
big_boulder/src/adapt_display/launch/: display.launch.py  launch_simulation.launch.py  real_world.launch.py
big_boulder/src/adapt_display/scripts/: rw_viz.py  scan_debug.py  spawn_single_ball.py.bak
big_boulder/src/adapt_display/scripts/install/: local_setup.sh  setup.sh
big_boulder/src/adapt_display/scripts/log/: latest_build
big_boulder/src/adapt_display/src/: cpp_node.cpp  scan_tracker.cpp
install/: local_setup.sh  setup.sh
install/adapt_display/lib/adapt_display/: cpp_node  rw_viz.py  scan_tracker  spawn_multiple_balls.py  spawn_single_ball.py
install/adapt_display/share/adapt_display/: local_setup.dsv  package.bash  package.dsv  package.sh  package.zsh
log/: latest_build
pixel_board_ui/: build.gradle.kts  settings.gradle.kts
pixel_board_ui/src/main/kotlin/: AppState.kt  AppViewModel.kt  DesktopInputController.kt  InteractiveGestureHeuristics.kt  Main.kt  ProcessManager.kt  RigidInteractiveCursorState.kt
pixel_board_ui/src/test/kotlin/: BoardFrameJsonTest.kt  InteractiveGestureHeuristicsTest.kt  RigidInteractiveCursorStateTest.kt
rw/install/: local_setup.sh  setup.sh
rw/log/: latest_build
rw/src/ldlidar_stl_ros2/launch/: ld19.launch.py
rw/src/ldlidar_stl_ros2/src/: demo.cpp
tests/: test_ros_bridge_touch_tracker.py
(+43 files in other folders)
